Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-140516

qtbase/src/tools/bootstrap can't be built for Android

XMLWordPrintable

    • Android
    • 039677408 (dev), bc998c660 (6.10), 81680f44f (tqtc/lts-6.8)
    • 2025wk40s2-3QtforAndroid

      The easiest way to reproduce is to configure for Android with -D QT_FORCE_BUILD_TOOLS=ON and then run:

      ninja qtbase/src/tools/bootstrap/CMakeFiles/Bootstrap.dir/__/__/corelib/kernel/qcoreapplication.cpp.o
      

      The error is:

      FAILED: [code=1] qtbase/src/tools/bootstrap/CMakeFiles/Bootstrap.dir/__/__/corelib/kernel/qcoreapplication.cpp.o 
      /Volumes/extHDD/conan-qt6-andr64/androfc56993af3bc2/p/bin/toolchains/llvm/prebuilt/darwin-x86_64/bin/clang++ --target=aarch64-none-linux-android28 --sysroot=/Volumes/extHDD/conan-qt6-andr64/androfc56993af3bc2/p/bin/toolchains/llvm/prebuilt/darwin-x86_64/sysroot -DHAVE_CONFIG_H -DPCRE2_CODE_UNIT_WIDTH=16 -DPCRE2_DISABLE_JIT -DQT_BOOTSTRAPPED -DQT_EXPLICIT_QFILE_CONSTRUCTION_FROM_PATH -DQT_NO_CAST_FROM_ASCII -DQT_NO_CAST_TO_ASCII -DQT_NO_DEBUG -DQT_NO_FOREACH -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_NO_QASCONST -DQT_NO_QEXCHANGE -DQT_NO_QSNPRINTF -DQT_TYPESAFE_FLAGS -DQT_USE_QSTRINGBUILDER -DQT_VERSION_MAJOR=6 -DQT_VERSION_MINOR=8 -DQT_VERSION_PATCH=3 -DQT_VERSION_STR=\"6.8.3\" -D_LIBCPP_HARDENING_MODE=_LIBCPP_HARDENING_MODE_FAST -I/Users/kambala/Downloads/qt6-b-andr/qtbase/src/corelib/Core_autogen/include -I/Users/kambala/Downloads/qt6-b-andr/qtbase/include -I/Users/kambala/Downloads/qt6-b-andr/qtbase/include/QtCore -I/Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib -I/Users/kambala/Downloads/qt6-b-andr/qtbase/src/corelib -I/Users/kambala/Downloads/qt6-b-andr/qtbase/src/corelib/global -I/Users/kambala/Downloads/qt6-b-andr/qtbase/src/corelib/kernel -I/Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/../3rdparty/tinycbor/src -I/Users/kambala/Downloads/qt6-b-andr/qtbase/include/QtCore/6.8.3 -I/Users/kambala/Downloads/qt6-b-andr/qtbase/include/QtCore/6.8.3/QtCore -I/Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/../3rdparty/double-conversion/double-conversion -I/Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/../3rdparty/double-conversion -I/Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/../3rdparty/forkfd -I/Users/kambala/Downloads/qt6-b-andr/qtbase/src/corelib/.rcc -I/Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/mkspecs/android-clang -I/Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/3rdparty/pcre2/src -I/Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/tools/bootstrap/../../corelib/global -I/Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/tools/bootstrap/.. -I/Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/tools/bootstrap/../../3rdparty/tinycbor/src -I/Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/tools/bootstrap/../../3rdparty/pcre2/src -DANDROID -fdata-sections -ffunction-sections -funwind-tables -fstack-protector-strong -no-canonical-prefixes -D_FORTIFY_SOURCE=2 -Wformat -Werror=format-security -DNDEBUG -Oz -std=gnu++17 -fPIC -fvisibility=hidden -fvisibility-inlines-hidden -Wall -Wextra -ffunction-sections -fdata-sections -pthread -ftrivial-auto-var-init=pattern -fstack-protector-strong -MD -MT qtbase/src/tools/bootstrap/CMakeFiles/Bootstrap.dir/__/__/corelib/kernel/qcoreapplication.cpp.o -MF qtbase/src/tools/bootstrap/CMakeFiles/Bootstrap.dir/__/__/corelib/kernel/qcoreapplication.cpp.o.d -o qtbase/src/tools/bootstrap/CMakeFiles/Bootstrap.dir/__/__/corelib/kernel/qcoreapplication.cpp.o -c /Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/kernel/qcoreapplication.cpp
      In file included from /Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/kernel/qcoreapplication.cpp:5:
      In file included from /Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/kernel/qcoreapplication.h:280:
      In file included from /Users/kambala/Downloads/qt6-b-andr/qtbase/include/QtCore/qcoreapplication_platform.h:1:
      In file included from /Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/kernel/qcoreapplication_platform.h:21:
      In file included from /Users/kambala/Downloads/qt6-b-andr/qtbase/include/QtCore/qjnitypes.h:1:
      In file included from /Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/kernel/qjnitypes.h:10:
      In file included from /Users/kambala/Downloads/qt6-b-andr/qtbase/include/QtCore/qjniobject.h:1:
      In file included from /Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/kernel/qjniobject.h:848:
      In file included from /Users/kambala/Downloads/qt6-b-andr/qtbase/include/QtCore/qjniarray.h:1:
      /Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/kernel/qjniarray.h:212:56: error: no member named 'AreArgumentsConvertibleWithoutNarrowingBase' in namespace 'QtPrivate'
        212 |     using if_convertible = std::enable_if_t<QtPrivate::AreArgumentsConvertibleWithoutNarrowingBase<From, To>::value, bool>;
            |                                             ~~~~~~~~~~~^
      /Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/kernel/qjniarray.h:212:100: error: 'From' does not refer to a value
        212 |     using if_convertible = std::enable_if_t<QtPrivate::AreArgumentsConvertibleWithoutNarrowingBase<From, To>::value, bool>;
            |                                                                                                    ^
      /Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/kernel/qjniarray.h:211:24: note: declared here
        211 |     template <typename From, typename To>
            |                        ^
      /Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/kernel/qjniarray.h:212:116: error: expected ';' after alias declaration
        212 |     using if_convertible = std::enable_if_t<QtPrivate::AreArgumentsConvertibleWithoutNarrowingBase<From, To>::value, bool>;
            |                                                                                                                    ^
            |                                                                                                                    ;
      /Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/kernel/qjniarray.h:212:122: error: expected member name or ';' after declaration specifiers
        212 |     using if_convertible = std::enable_if_t<QtPrivate::AreArgumentsConvertibleWithoutNarrowingBase<From, To>::value, bool>;
            |                                                                                                                      ~~~~^
      /Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/kernel/qjniarray.h:214:61: error: no member named 'AreArgumentsConvertibleWithoutNarrowingBase' in namespace 'QtPrivate'
        214 |     using unless_convertible = std::enable_if_t<!QtPrivate::AreArgumentsConvertibleWithoutNarrowingBase<From, To>::value, bool>;
            |                                                  ~~~~~~~~~~~^
      /Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/kernel/qjniarray.h:214:105: error: 'From' does not refer to a value
        214 |     using unless_convertible = std::enable_if_t<!QtPrivate::AreArgumentsConvertibleWithoutNarrowingBase<From, To>::value, bool>;
            |                                                                                                         ^
      /Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/kernel/qjniarray.h:213:24: note: declared here
        213 |     template <typename From, typename To>
            |                        ^
      /Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/kernel/qjniarray.h:214:121: error: expected ';' after alias declaration
        214 |     using unless_convertible = std::enable_if_t<!QtPrivate::AreArgumentsConvertibleWithoutNarrowingBase<From, To>::value, bool>;
            |                                                                                                                         ^
            |                                                                                                                         ;
      /Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/kernel/qjniarray.h:214:127: error: expected member name or ';' after declaration specifiers
        214 |     using unless_convertible = std::enable_if_t<!QtPrivate::AreArgumentsConvertibleWithoutNarrowingBase<From, To>::value, bool>;
            |                                                                                                                           ~~~~^
      /Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/kernel/qjniarray.h:227:21: error: no member named 'AreArgumentsConvertibleWithoutNarrowingBase' in namespace 'QtPrivate'
        227 |         (QtPrivate::AreArgumentsConvertibleWithoutNarrowingBase<E, typename C::value_type>::value
            |          ~~~~~~~~~~~^
      /Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/kernel/qjniarray.h:227:65: error: 'E' does not refer to a value
        227 |         (QtPrivate::AreArgumentsConvertibleWithoutNarrowingBase<E, typename C::value_type>::value
            |                                                                 ^
      /Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/kernel/qjniarray.h:225:24: note: declared here
        225 |     template <typename E, typename CRef, typename C = q20::remove_cvref_t<CRef>>
            |                        ^
      /Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/kernel/qjniarray.h:226:27: error: constexpr variable 'isCompatibleTargetContainer' must be initialized by a constant expression
        226 |     static constexpr bool isCompatibleTargetContainer =
            |                           ^
            |                                                       = false
      /Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/kernel/qjniarray.h:384:31: error: no template named 'if_convertible'; did you mean 'std::is_convertible'?
        384 |     template <typename Other, if_convertible<Other, T> = true>
            |                               ^~~~~~~~~~~~~~
            |                               std::is_convertible
      /Volumes/extHDD/conan-qt6-andr64/androfc56993af3bc2/p/bin/toolchains/llvm/prebuilt/darwin-x86_64/sysroot/usr/include/c++/v1/__type_traits/is_convertible.h:22:29: note: 'std::is_convertible' declared here
         22 | struct _LIBCPP_TEMPLATE_VIS is_convertible : public integral_constant<bool, __is_convertible(_T1, _T2)> {};
            |                             ^
      In file included from /Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/kernel/qcoreapplication.cpp:5:
      In file included from /Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/kernel/qcoreapplication.h:280:
      In file included from /Users/kambala/Downloads/qt6-b-andr/qtbase/include/QtCore/qcoreapplication_platform.h:1:
      In file included from /Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/kernel/qcoreapplication_platform.h:21:
      In file included from /Users/kambala/Downloads/qt6-b-andr/qtbase/include/QtCore/qjnitypes.h:1:
      In file included from /Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/kernel/qjnitypes.h:10:
      In file included from /Users/kambala/Downloads/qt6-b-andr/qtbase/include/QtCore/qjniobject.h:1:
      In file included from /Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/kernel/qjniobject.h:848:
      In file included from /Users/kambala/Downloads/qt6-b-andr/qtbase/include/QtCore/qjniarray.h:1:
      /Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/kernel/qjniarray.h:389:31: error: no template named 'if_convertible'; did you mean 'std::is_convertible'?
        389 |     template <typename Other, if_convertible<Other, T> = true>
            |                               ^~~~~~~~~~~~~~
            |                               std::is_convertible
      /Volumes/extHDD/conan-qt6-andr64/androfc56993af3bc2/p/bin/toolchains/llvm/prebuilt/darwin-x86_64/sysroot/usr/include/c++/v1/__type_traits/is_convertible.h:22:29: note: 'std::is_convertible' declared here
         22 | struct _LIBCPP_TEMPLATE_VIS is_convertible : public integral_constant<bool, __is_convertible(_T1, _T2)> {};
            |                             ^
      In file included from /Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/kernel/qcoreapplication.cpp:5:
      In file included from /Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/kernel/qcoreapplication.h:280:
      In file included from /Users/kambala/Downloads/qt6-b-andr/qtbase/include/QtCore/qcoreapplication_platform.h:1:
      In file included from /Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/kernel/qcoreapplication_platform.h:21:
      In file included from /Users/kambala/Downloads/qt6-b-andr/qtbase/include/QtCore/qjnitypes.h:1:
      In file included from /Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/kernel/qjnitypes.h:10:
      In file included from /Users/kambala/Downloads/qt6-b-andr/qtbase/include/QtCore/qjniobject.h:1:
      In file included from /Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/kernel/qjniobject.h:848:
      In file included from /Users/kambala/Downloads/qt6-b-andr/qtbase/include/QtCore/qjniarray.h:1:
      /Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/kernel/qjniarray.h:394:31: error: no template named 'if_convertible'; did you mean 'std::is_convertible'?
        394 |     template <typename Other, if_convertible<Other, T> = true>
            |                               ^~~~~~~~~~~~~~
            |                               std::is_convertible
      /Volumes/extHDD/conan-qt6-andr64/androfc56993af3bc2/p/bin/toolchains/llvm/prebuilt/darwin-x86_64/sysroot/usr/include/c++/v1/__type_traits/is_convertible.h:22:29: note: 'std::is_convertible' declared here
         22 | struct _LIBCPP_TEMPLATE_VIS is_convertible : public integral_constant<bool, __is_convertible(_T1, _T2)> {};
            |                             ^
      In file included from /Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/kernel/qcoreapplication.cpp:5:
      In file included from /Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/kernel/qcoreapplication.h:280:
      In file included from /Users/kambala/Downloads/qt6-b-andr/qtbase/include/QtCore/qcoreapplication_platform.h:1:
      In file included from /Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/kernel/qcoreapplication_platform.h:21:
      In file included from /Users/kambala/Downloads/qt6-b-andr/qtbase/include/QtCore/qjnitypes.h:1:
      In file included from /Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/kernel/qjnitypes.h:10:
      In file included from /Users/kambala/Downloads/qt6-b-andr/qtbase/include/QtCore/qjniobject.h:1:
      In file included from /Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/kernel/qjniobject.h:848:
      In file included from /Users/kambala/Downloads/qt6-b-andr/qtbase/include/QtCore/qjniarray.h:1:
      /Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/kernel/qjniarray.h:400:31: error: no template named 'if_convertible'; did you mean 'std::is_convertible'?
        400 |     template <typename Other, if_convertible<Other, T> = true>
            |                               ^~~~~~~~~~~~~~
            |                               std::is_convertible
      /Volumes/extHDD/conan-qt6-andr64/androfc56993af3bc2/p/bin/toolchains/llvm/prebuilt/darwin-x86_64/sysroot/usr/include/c++/v1/__type_traits/is_convertible.h:22:29: note: 'std::is_convertible' declared here
         22 | struct _LIBCPP_TEMPLATE_VIS is_convertible : public integral_constant<bool, __is_convertible(_T1, _T2)> {};
            |                             ^
      In file included from /Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/kernel/qcoreapplication.cpp:5:
      In file included from /Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/kernel/qcoreapplication.h:280:
      In file included from /Users/kambala/Downloads/qt6-b-andr/qtbase/include/QtCore/qcoreapplication_platform.h:1:
      In file included from /Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/kernel/qcoreapplication_platform.h:21:
      In file included from /Users/kambala/Downloads/qt6-b-andr/qtbase/include/QtCore/qjnitypes.h:1:
      In file included from /Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/kernel/qjnitypes.h:10:
      In file included from /Users/kambala/Downloads/qt6-b-andr/qtbase/include/QtCore/qjniobject.h:1:
      In file included from /Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/kernel/qjniobject.h:848:
      In file included from /Users/kambala/Downloads/qt6-b-andr/qtbase/include/QtCore/qjniarray.h:1:
      /Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/kernel/qjniarray.h:408:31: error: no template named 'unless_convertible'; did you mean 'std::is_convertible'?
        408 |     template <typename Other, unless_convertible<Other, T> = true>
            |                               ^~~~~~~~~~~~~~~~~~
            |                               std::is_convertible
      /Volumes/extHDD/conan-qt6-andr64/androfc56993af3bc2/p/bin/toolchains/llvm/prebuilt/darwin-x86_64/sysroot/usr/include/c++/v1/__type_traits/is_convertible.h:22:29: note: 'std::is_convertible' declared here
         22 | struct _LIBCPP_TEMPLATE_VIS is_convertible : public integral_constant<bool, __is_convertible(_T1, _T2)> {};
            |                             ^
      In file included from /Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/kernel/qcoreapplication.cpp:5:
      In file included from /Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/kernel/qcoreapplication.h:280:
      In file included from /Users/kambala/Downloads/qt6-b-andr/qtbase/include/QtCore/qcoreapplication_platform.h:1:
      In file included from /Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/kernel/qcoreapplication_platform.h:21:
      In file included from /Users/kambala/Downloads/qt6-b-andr/qtbase/include/QtCore/qjnitypes.h:1:
      In file included from /Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/kernel/qjnitypes.h:10:
      In file included from /Users/kambala/Downloads/qt6-b-andr/qtbase/include/QtCore/qjniobject.h:1:
      In file included from /Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/kernel/qjniobject.h:848:
      In file included from /Users/kambala/Downloads/qt6-b-andr/qtbase/include/QtCore/qjniarray.h:1:
      /Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/kernel/qjniarray.h:409:5: error: constructor cannot be redeclared
        409 |     QJniArray(const QJniArray<Other> &other) = delete;
            |     ^
      /Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/kernel/qjniarray.h:385:5: note: previous definition is here
        385 |     QJniArray(const QJniArray<Other> &other)
            |     ^
      /Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/kernel/qjniarray.h:410:31: error: no template named 'unless_convertible'; did you mean 'std::is_convertible'?
        410 |     template <typename Other, unless_convertible<Other, T> = true>
            |                               ^~~~~~~~~~~~~~~~~~
            |                               std::is_convertible
      /Volumes/extHDD/conan-qt6-andr64/androfc56993af3bc2/p/bin/toolchains/llvm/prebuilt/darwin-x86_64/sysroot/usr/include/c++/v1/__type_traits/is_convertible.h:22:29: note: 'std::is_convertible' declared here
         22 | struct _LIBCPP_TEMPLATE_VIS is_convertible : public integral_constant<bool, __is_convertible(_T1, _T2)> {};
            |                             ^
      In file included from /Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/kernel/qcoreapplication.cpp:5:
      In file included from /Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/kernel/qcoreapplication.h:280:
      In file included from /Users/kambala/Downloads/qt6-b-andr/qtbase/include/QtCore/qcoreapplication_platform.h:1:
      In file included from /Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/kernel/qcoreapplication_platform.h:21:
      In file included from /Users/kambala/Downloads/qt6-b-andr/qtbase/include/QtCore/qjnitypes.h:1:
      In file included from /Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/kernel/qjnitypes.h:10:
      In file included from /Users/kambala/Downloads/qt6-b-andr/qtbase/include/QtCore/qjniobject.h:1:
      In file included from /Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/kernel/qjniobject.h:848:
      In file included from /Users/kambala/Downloads/qt6-b-andr/qtbase/include/QtCore/qjniarray.h:1:
      /Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/kernel/qjniarray.h:411:5: error: constructor cannot be redeclared
        411 |     QJniArray(QJniArray<Other> &&other) noexcept = delete;
            |     ^
      /Volumes/extHDD/conan-qt6-andr64/qt30a3d6f88a8d4/s/src/qtbase/src/corelib/kernel/qjniarray.h:390:5: note: previous definition is here
        390 |     QJniArray(QJniArray<Other> &&other) noexcept
            |     ^
      19 errors generated.
      ninja: build stopped: subcommand failed.
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            assam Assam Boudjelthia
            kambala Andrey Filipenkov
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes