Fix Android builds with QT_FORCE_BUILD_TOOLS=ON

Bootstrapped builds don't have streamable qCDebug() calls, so use printf
style.

Also, QJniObject can't be used in this build type, so guard it under
QCoreApplicationPrivate::appVersion().

Fixes: QTBUG-140516
Pick-to: 6.8
Change-Id: I912e57689f758627ef6ca63405b557940adbf186
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>
(cherry picked from commit 039677408eb1acb6bf1c5afcdfcda7be93e67f17)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>